Changed Restaurant Name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Philipp Schiweck">
 	<link rel="icon" href="images/logo.jpg">
 
-    <title>KISU Frankfurt</title>
+    <title>Lotus Garden</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -37,7 +37,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">KISU Frankfurt</span>
+        <span class="d-block d-lg-none">Lotus Garden</span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="images/logo.jpg" alt="Logo">
         </span>
@@ -76,11 +76,11 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column " id="home">
         <div class="my-auto">
-          <h1 class="mb-0">KISU
-            <span class="text-primary">Frankfurt</span>
+          <h1 class="mb-0">Lotus
+            <span class="text-primary">Garden</span>
           </h1>
-          <div class="subheading mb-5">Jahnstrasse 51 · 60318 Frankfurt am Main · Tel: 069 91508855 ·
-            <a href="mailto:name@email.com">kisufrankfurt@gmail.com</a>
+          <div class="subheading mb-5">Alteburgstraße 150 · 72762 Reutlingen · Tel: 01234 56789 ·
+            <a href="mailto:name@email.com">email@example.com</a>
           </div>
           <p class="mb-5"><b>Sushi Bar & Vietnamesische Küche</b><br>Genießen Sie Sushi & klassische vietnamesische Küche in modernem Ambiente!</p>
 		  <div class="row gallery col-lg-12">
@@ -91,7 +91,7 @@
 			<div class="col-lg-6 reserve ">
 				<b>Reservieren können sie bei uns telefonisch:</b><br>
 				<br>
-				Tel: 069 91508855<br>
+				Tel: 01234 56789<br>
 			</div>
 			<div class="col-lg-12">
 				<br><br>
@@ -105,7 +105,7 @@
 			</div>
 			<div class="col-lg-6 ">
 				<br>
-				<iframe width="100%" height="400" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=place_id:ChIJGfidHrEOvUcR4HLCnVUFxDw&key=AIzaSyDJAE9_2npmIZu8WMR7Qv_wn1SFN8WvVGQ" allowfullscreen></iframe> 
+				<iframe width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=Hochschule%20Reutlingen&key=AIzaSyDJAE9_2npmIZu8WMR7Qv_wn1SFN8WvVGQ" allowfullscreen></iframe>  
 			</div>
 			<div class="col-lg-12">
 				<br><br>
@@ -114,7 +114,7 @@
 				<a class="image-div" href="images/parken.jpg" data-lightbox="imageParken" data title="Parken"><img src="images/parken.jpg" class="img-responsive" alt="Parken"></a>
 			</div>
 			<div class="col-lg-6 parking ">
-				<b>Parkmöglichkeiten gibt es ganz in der Nähe vom KISU:</b><br><br>
+				<b>Parkmöglichkeiten gibt es ganz in der Nähe von Lotus Garden:</b><br><br>
 				Öffnungszeiten des Parkhauses:<br>
 				Mo-So von 7:00 - 19:00<br>
 				1 Stunde - 2,50 €<br>
@@ -396,15 +396,12 @@ kommt, gehören auch Nudeln wie Soba und Udon zu den klassischen Grundzutaten vo
 	  <section class="resume-section p-3 p-lg-5 d-flex flex-column " id="impressum">
         <div class="my-auto">
 			<h2 class="mb-5">Impressum</h2>
-			Seite erstellt von <a href="http://www.philippschiweck.com" target="_blank">Philipp Schiweck</a><br><br>
 			<b>Anbieter:</b><br>
-			Restaurant Kisu<br>
-			Inh. Herr Chung Vo<br>
-			Jahnstrasse 51<br>
-			60318 Frankfurt am Main<br>
-			TEL: 069 91508855<br>
-			E-MAIL: KISUFRANKFURT@GMAIL.COM<br>
-			Internet: <a href="www.kisu-frankfurt.de">www.kisu-frankfurt.de</a><br><br>
+			Lotus Garden<br>
+			Alteburgstraße 150<br>
+			72762 Reutlingen<br>
+			TEL: 0123 456789<br>
+			E-MAIL: email@example.com<br>
 			Steuernummer: <br>
 			Ust.-ID: <br>
 			<br>
