--- a/frontend/index.html
+++ b/frontend/index.html
@@ -49,6 +49,9 @@
         <ul class="navbar-nav">
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+					</li>
+					<li class="nav-item">
+            <a class="nav-link js-scroll-trigger" href="#reservieren">Reservieren</a>
           </li>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#angebot">Angebot</a>
