Table images added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -132,19 +132,6 @@
 					<h2 class="mb-5">Reservieren</h2>
 				<form>
 					<div class="row">
-						<div class="col-lg-4">						
-							<b>Name:</b><br>
-							<input class="mt-1 col-lg-12" type="text" name="name" placeholder="Vor/Nachname"><br>
-						</div>
-						<div class="col-lg-4">
-								<b>E-Mail:</b><br>
-								<input class="mt-1 col-lg-12" type="email" name="email" placeholder="email@example.com"><br>
-						</div>
-						<div class="col-lg-4">
-								<b>Phone:</b><br>
-								<input class="mt-1 col-lg-12" type="text" name="phone" placeholder="Mobile"><br>
-						</div>
-						<hr>
 						<div class="col-lg-4">
 								<b>Reservierungsdatum:</b><br>
 								<input class="p-2 mt-1" type="date" name="datetime" value="" id="datetimeField">
@@ -152,6 +139,21 @@
 						</div>
 						<img class="mt-4 img-fluid" src="images/layout.png">
 						<button class="col-lg-12 mt-3 p-2 btn btn-success " type="button">Reservieren</button>
+
+						<div id="personalDataInputContainer">
+							<div class="col-lg-4">						
+								<b>Name:</b><br>
+								<input class="mt-1 col-lg-12" type="text" name="name" placeholder="Vor/Nachname"><br>
+							</div>
+							<div class="col-lg-4">
+									<b>E-Mail:</b><br>
+									<input class="mt-1 col-lg-12" type="email" name="email" placeholder="email@example.com"><br>
+							</div>
+							<div class="col-lg-4">
+									<b>Phone:</b><br>
+									<input class="mt-1 col-lg-12" type="text" name="phone" placeholder="Mobile"><br>
+							</div>
+						</div>
 					</div>
 				</form>
 			</section>
