Placed tables on the page

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -22,12 +22,15 @@
     <link href="css/simple-line-icons.min.css" rel="stylesheet">
 
     <!-- Custom styles for this site -->
-	<link href="css/stylesheet.min.css" rel="stylesheet">
+		<link href="css/stylesheet.min.css" rel="stylesheet">
     <link href="css/resume.min.css" rel="stylesheet">
 	
 	<!-- Gallery styles -->
 	<link href="css/lightbox.min.css" rel="stylesheet">
 	
+	<!-- RESERVATION -->
+	<link href="css/reservation.css" rel="stylesheet">
+
 	<!-- Jquery-->
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js" type="text/javascript"></script>
 
@@ -137,7 +140,29 @@
 								<input class="p-2 mt-1" type="date" name="datetime" value="" id="datetimeField">
 								<input type="time">
 						</div>
-						<img class="mt-4 img-fluid" src="images/layout.png">
+					</div>
+					<div class="row">
+							<div id="tableSpace">
+									<div id="topRow">
+										<div id="topLeft">
+											<img class="reserveTable" id="rtb1" src="images/reservation/two_table.png"><br>
+											<img class="reserveTable" id="rtb2" src="images/reservation/two_table.png">
+										</div>							
+										<img class="reserveTable" id="rtb3" src="images/reservation/four_table.png">
+										<div id="topRight">
+											<img class="reserveTable" id="rtb4" src="images/reservation/two_table.png"><br>
+											<img class="reserveTable" id="rtb5" src="images/reservation/two_table.png">
+										</div>
+										<div id="placeHODLER"></div>
+									</div>							
+									<div id="bottomRow">
+										<img class="reserveTable" id="rtb6" src="images/reservation/six_table.png">
+										<img class="reserveTable" id="rtb7" src="images/reservation/eight_table.png">
+										<img class="reserveTable" id="rtb8" src="images/reservation/eight_table.png">
+										<img class="reserveTable" id="rtb9" src="images/reservation/round_table.png">
+									</div>							
+								</div>
+					</div>
 						<button class="col-lg-12 mt-3 p-2 btn btn-success " type="button">Reservieren</button>
 
 						<div id="personalDataInputContainer">
