Fix dateField variable name

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -140,7 +140,7 @@
 					<div class="row">
 						<div class="col-lg-4">
 								<b>Reservierungsdatum:</b><br>
-								<input class="p-2 mt-1" type="date" name="date" id="dateFiled">
+								<input class="p-2 mt-1" type="date" name="date" id="dateField">
 								<input type="time" id="timeField" min="12:00" max="24:00">
 						</div>
 					</div>
