Try to fetch tables from Server

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -528,6 +528,7 @@ kommt, gehören auch Nudeln wie Soba und Udon zu den klassischen Grundzutaten vo
 	<script src="js/scripts.js"></script>
 	<script src="js/reservation.js"></script>
 	<script src="js/timePicker.js"></script>
+	<script src="js/dateFieldHandler.js"></script>
 
   </body>
 
