--- a/frontend/index.html
+++ b/frontend/index.html
@@ -189,11 +189,11 @@
 							</div>
 							<div class="col-lg-4">
 									<b>E-Mail:</b><br>
-									<input class="mt-1 col-lg-12" type="email" name="email" placeholder="email@example.com"><br>
+									<input id="mailInput" class="mt-1 col-lg-12" type="email" name="email" placeholder="email@example.com"><br>
 							</div>
 							<div class="col-lg-4">
 									<b>Phone:</b><br>
-									<input class="mt-1 col-lg-12" type="text" name="phone" placeholder="Mobile"><br>
+									<input id="phoneInput" class="mt-1 col-lg-12" type="text" name="phone" placeholder="Mobile"><br>
 							</div>
 						</div>
 						<button id="reserveButton" class="col-lg-12 mt-3 p-2 btn" type="button">Reservieren</button>
