Minor changes to index.html

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -94,7 +94,7 @@
 		  <div class="row gallery col-lg-12">
 
 			<div class="col-lg-6 mainImage">
-				<a class="image-div" href="images/titleImage_large.jpg" data-lightbox="imageTitle" data title="KISU"><img src="images/titleImage.jpg" class="img-responsive" alt="MainImage"></a>
+				<a class="image-div" href="images/titleImage_large.jpg" data-lightbox="imageTitle" data title="Lotus"><img src="images/titleImage.jpg" class="img-responsive" alt="MainImage"></a>
 			</div>
 			<div class="col-lg-6 reserve ">
 				<b>Reservieren können sie bei uns telefonisch:</b><br>
@@ -461,8 +461,8 @@ kommt, gehören auch Nudeln wie Soba und Udon zu den klassischen Grundzutaten vo
 	
 	
 	<script src="js/ie10-viewport-bug-workaround.js"></script>
-	
-	<script src="js/popper.js"></script>
+
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
 	<script src="js/scripts.js"></script>
 	<script src="js/reservation.js"></script>
 	<script src="js/timePicker.js"></script>
