Reservation success message added

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -193,7 +193,7 @@
 							</div>
 							<div class="col-lg-4">
 									<b>Phone:</b><br>
-									<input id="phoneInput" class="mt-1 col-lg-12" type="text" name="phone" placeholder="Mobile"><br>
+									<input id="phoneInput" class="mt-1 col-lg-12" type="number" name="phone" placeholder="Mobile"><br>
 							</div>
 						</div>
 						<button id="reserveButton" class="col-lg-12 mt-3 p-2 btn" type="button">Reservieren</button>
