--- a/frontend/index.html
+++ b/frontend/index.html
@@ -90,7 +90,7 @@
           <div class="subheading mb-5">Alteburgstraße 150 · 72762 Reutlingen · Phone: 01234 56789 ·
             <a href="mailto:name@email.com">email@example.com</a>
           </div>
-          <p class="mb-5"><b>Sushi Bar & Vietnamesische Cuisine</b><br>Enjoy Sushi & classic Vietnamese Cuisine in a modern setting!</p>
+          <p class="mb-5"><b>Sushi Bar & Vietnamese Cuisine</b><br>Enjoy Sushi & classic Vietnamese Cuisine in a modern setting!</p>
 		  <div class="row gallery col-lg-12">
 
 			<div class="col-lg-6 mainImage">
